@@ -9,6 +9,7 @@ version 0.6.3 - xx-Jan-2009
  . Demos: ParticlesDemo has the Rain Particle example (issue #136)
  . Director: allow cleanup when deallocing the director (issue #144)
  . Director: avoid useless GL commands when displaying FPS (issue #162)
+ . Director: possibility to change the DepthBuffer size (issue #160)
  . Menu: MenuItemToggle supports assigning the selectedIndex (issue #152)
  . Menu: aligment takes into account if status bar is present (issue #131)
  . MenuItem: improved compiler warning (issue #147)
